--- a/package.json
+++ b/package.json
@@ -1,36 +1,12 @@
 {
-  "name": "react-card-app",
+  "name": "react-card-app-server",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "server": "json-server --watch db.json -p 8801",
-    "server:help": "json-server --help",
-    "start:app": "concurrently \"npm run server\" \"npm run dev\""
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3",
-    "react-toastify": "^11.0.5"
+    "server": "json-server db.json -p 8801"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "concurrently": "^9.2.1",
-    "eslint": "^9.24.0",
-    "eslint-plugin-prettier": "^5.3.1",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "json-server": "^1.0.0-beta.3",
-    "vite": "^6.2.0"
+    "json-server": "^1.0.0-beta.3"
   }
 }
